--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "Saurav Dhakal",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^7.6.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
